--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     android:padding="15dp"
-    tools:context=".AddGridActivity">
+    tools:context=".activity.AddGridActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
