--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     android:orientation="vertical"
-    tools:context=".PlayVideoActivity">
+    tools:context=".activity.PlayVideoActivity">
 
     <include
         android:id="@+id/appBar"
@@ -14,7 +13,7 @@
         />
 
     <ScrollView
-        android:id="@+id/scroolVideo"
+        android:id="@+id/scrollVideo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.8">
@@ -25,64 +24,12 @@
             android:orientation="horizontal">
 
             <android.support.constraint.ConstraintLayout
-                android:id="@+id/constraint_video"
+                android:id="@+id/constraint_video_player"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.8"
                 android:visibility="visible">
 
-                <VideoView
-                    android:id="@+id/video_view_selected"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintDimensionRatio="1920:1080"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <LinearLayout
-                    android:id="@+id/video_control"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="8dp"
-                    android:orientation="vertical"
-                    app:layout_constraintBottom_toBottomOf="@+id/video_view_selected"
-                    app:layout_constraintEnd_toEndOf="@+id/video_view_selected"
-                    app:layout_constraintTop_toTopOf="@+id/video_view_selected">
-
-                    <android.support.design.widget.FloatingActionButton
-                        android:id="@+id/bt_play_selected"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:src="@android:drawable/ic_media_play"
-                        app:backgroundTint="@color/color12" />
-
-                    <android.support.design.widget.FloatingActionButton
-                        android:id="@+id/bt_replay"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:longClickable="false"
-                        app:backgroundTint="@color/color2"
-                        app:srcCompat="@drawable/replay_black" />
-
-                    <fr.wildcodeschool.vyfe.StopwatchView
-                        android:id="@+id/chronometer_play"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:background="@color/colorCharcoal"
-                        android:padding="10dp"
-                        android:textColor="@color/colorFadedOrange"
-                        android:textStyle="bold" />
-                </LinearLayout>
             </android.support.constraint.ConstraintLayout>
 
 
@@ -107,47 +54,10 @@
     </ScrollView>
 
     <ScrollView
-        android:id="@+id/scroolTimeline"
+        android:id="@+id/scrollTimeline"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.2">
-
-        <!--Container général-->
-        <RelativeLayout
-            android:id="@+id/time_lines_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <!--Timeline avec image tag-->
-            <LinearLayout
-                android:id="@+id/ll_main_playvideo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical" />
-
-
-            <SeekBar
-                android:id="@+id/seek_bar_selected"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:clickable="false"
-                android:focusable="false"
-                android:longClickable="false"
-                android:progressDrawable="@android:color/transparent"
-                android:thumb="@drawable/thumb_blue"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </RelativeLayout>
-
-    </ScrollView>
+        android:layout_weight="0.2" />
 </LinearLayout>
 
 
