--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -69,8 +69,7 @@
 
                     <LinearLayout
                         android:id="@+id/btn_create_grid"
-                        android:layout_width="0dp
-"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="15dp"
                         android:layout_weight="0.5"
