--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -8,11 +8,12 @@
 
 
     <!--Timeline avec image tag-->
-    <android.support.v7.widget.RecyclerView
+    <LinearLayout
         android:id="@+id/ll_main_playvideo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        />
 
 
     <SeekBar
