--- a/app/src/main/res/values/password.xml
+++ b/app/src/main/res/values/password.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="networkSSID">Vyfe-HotSpot</string>
     <string name="networkPass">dietpihotspot</string>
+    <string name="token_vimeo">bearer f809d258eb7f7e83d8c5a3e468e53d9b</string>
 </resources>
