VyfeViewModel, passing all seesions threw intent by their id and use repositories a better way

--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -47,7 +47,7 @@
             app:backgroundTint="@color/color2"
             app:srcCompat="@drawable/replay_black" />
 
-        <fr.wildcodeschool.vyfe.view.StopwatchView
+        <fr.vyfe.view.StopwatchView
             android:id="@+id/chronometer_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
