--- a/app/src/main/res/layout/fragment_record_timeline.xml
+++ b/app/src/main/res/layout/fragment_record_timeline.xml
@@ -7,11 +7,10 @@
     android:layout_height="match_parent"
     android:scrollbars="horizontal">
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/ll_main"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" />
+        android:layout_height="wrap_content"/>
 
 </HorizontalScrollView>
 
