--- a/app/src/main/res/layout/create_tags_fragment.xml
+++ b/app/src/main/res/layout/create_tags_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     android:padding="15dp"
-    tools:context="fr.vyfe.fragment.CreateTagsFragment">
+    tools:context="fr.vyfe.fragment.CreateTemplatesFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
