--- a/app/src/main/res/layout/fragment_record_timeline.xml
+++ b/app/src/main/res/layout/fragment_record_timeline.xml
@@ -7,10 +7,11 @@
     android:layout_height="match_parent"
     android:scrollbars="horizontal">
 
-    <android.support.v7.widget.RecyclerView
+    <LinearLayout
         android:id="@+id/ll_main"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"/>
 
 </HorizontalScrollView>
 
