--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -77,22 +77,38 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_connected" />
 
-                <EditText
-                    android:id="@+id/et_password"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp"
-                    android:background="@drawable/style_input"
-                    android:ems="10"
-                    android:fontFamily="@font/roboto"
-                    android:hint="@string/password"
-                    android:inputType="textPassword"
-                    android:padding="15dp"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/et_mail" />
+                    android:orientation="horizontal">
+                    <EditText
+                        android:id="@+id/et_password"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="25dp"
+                        android:layout_weight="0.9"
+                        android:background="@drawable/style_input"
+                        android:ems="10"
+                        android:fontFamily="@font/roboto"
+                        android:hint="@string/password"
+                        android:inputType="textPassword"
+                        android:padding="15dp"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/et_mail" />
+
+                    <ImageView
+                        android:id="@+id/iv_show_password"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/keypassword"
+                        android:layout_gravity="bottom"
+                        android:layout_weight="0.1"/>
+                </LinearLayout>
+
+
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -100,6 +116,13 @@
                     android:layout_marginTop="16dp"
                     android:orientation="horizontal"
                     android:paddingTop="20dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                    </LinearLayout>
 
                     <Button
                         android:id="@+id/tv_lost_password"
@@ -111,6 +134,7 @@
                         android:text="@string/lost_password"
                         android:textAllCaps="false"
                         android:textColor="@color/white" />
+
 
                     <Button
                         android:id="@+id/btn_connected"
@@ -144,7 +168,8 @@
                 android:paddingTop="10dp"
                 android:text="@string/create_account"
                 android:textColor="@color/white"
-                android:textSize="12sp" />
+                android:textSize="15sp"
+                android:layout_marginBottom="20dp"/>
 
         </LinearLayout>
     </ScrollView>
