--- a/app/src/main/res/layout/activity_selected_video.xml
+++ b/app/src/main/res/layout/activity_selected_video.xml
@@ -110,7 +110,7 @@
                         app:fontFamily="@font/roboto_bold" />
 
                     <Button
-                        android:id="@+id/bt_upload"
+                        android:id="@+id/btn_upload"
                         style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
