fix package name in test files

--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -153,7 +153,7 @@
 
 
                     <Button
-                        android:id="@+id/btn_connected"
+                        android:id="@+id/btn_connect"
                         style="@style/Widget.AppCompat.Button.Small"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
