--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -59,7 +59,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <EditText
@@ -85,6 +85,7 @@
                         android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:visibility="invisible"
+                        android:layout_marginStart="10dp"
                         android:src="@drawable/keypassword"
                         android:layout_gravity="bottom"
                         android:layout_weight="0.1"/>
@@ -93,7 +94,7 @@
 
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <EditText
@@ -119,6 +120,7 @@
                         android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:layout_weight="0.1"
+                        android:layout_marginStart="10dp"
                         android:src="@drawable/keypassword"
                         android:layout_gravity="bottom"
                         />
