--- a/app/src/main/res/layout/activity_selected_video.xml
+++ b/app/src/main/res/layout/activity_selected_video.xml
@@ -14,7 +14,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="65dp">
+        android:layout_marginTop="55dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,27 +53,63 @@
 
                 </android.support.constraint.ConstraintLayout>
 
-
-                <TextView
-                    android:id="@+id/tv_title"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/video_tittle"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    app:fontFamily="@font/roboto_bold" />
+                    android:orientation="horizontal"
+                    android:layout_marginTop="20dp">
 
-                <TextView
-                    android:id="@+id/tv_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="72dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/no_description"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    app:fontFamily="@font/roboto" />
+                    <TextView
+                        android:id="@+id/tv_fix_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/video_tittle"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        app:fontFamily="@font/roboto_bold" />
+
+                    <TextView
+                        android:id="@+id/tv_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/video_tittle"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="8dp"
+                        app:fontFamily="@font/roboto_bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="20dp">
+
+                    <TextView
+                        android:id="@+id/tv_fix_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/description"
+                        android:textColor="@color/white"
+                        android:textSize="16sp"
+                        app:fontFamily="@font/roboto" />
+
+                    <TextView
+                        android:id="@+id/tv_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:text="@string/no_description"
+                        android:textColor="@color/white"
+                        android:textSize="16sp"
+                        app:fontFamily="@font/roboto" />
+                </LinearLayout>
 
                 <LinearLayout
                     style="?android:attr/buttonBarStyle"
@@ -114,6 +150,7 @@
                         style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="0dp"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="00dp"
                         android:layout_weight="0.3"
@@ -122,25 +159,56 @@
                         android:textColor="@color/colorBlack"
                         android:textSize="18sp"
                         android:visibility="visible"
-                        app:fontFamily="@font/roboto_bold"
-                        android:layout_marginEnd="0dp" />
+                        app:fontFamily="@font/roboto_bold" />
+
                     <ImageView
                         android:id="@+id/iv_upload"
-                        android:visibility="invisible"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_weight="0.3"
-                        android:src="@drawable/animation_roue_white"/>
+                        android:src="@drawable/animation_roue_white"
+                        android:visibility="invisible" />
                 </LinearLayout>
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/re_tags"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.7"
-                android:padding="20dp" />
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_grid_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/used_grid"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:fontFamily="@font/roboto_bold"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/tv_grid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/used_grid"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    app:fontFamily="@font/roboto"
+                    android:layout_gravity="center"/>
+
+                <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/re_tags"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_height="match_parent"
+
+                    android:padding="20dp" />
+            </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
