--- a/app/src/main/res/layout/fragment_create_session.xml
+++ b/app/src/main/res/layout/fragment_create_session.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context="fr.vyfe.activity.CreateSessionActivity">
+    tools:context="fr.vyfe.activity.CreateSessionActivityTest">
 
     <ScrollView
         android:id="@+id/scrool_main"
