--- a/app/src/main/res/layout/activity_info_video.xml
+++ b/app/src/main/res/layout/activity_info_video.xml
@@ -26,23 +26,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="60dp"
-            android:layout_marginRight="60dp"
             android:layout_marginTop="100dp"
+            android:layout_marginStart="5dp"
+            android:alpha="0.4"
             android:background="@drawable/style_button"
+            android:clickable="false"
             android:text="@string/edit"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:fontFamily="@font/roboto_bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:alpha="0.4"
-            android:clickable="false"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/et_video_title"
             android:layout_width="350dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="60dp"
             android:layout_marginStart="60dp"
             android:layout_marginTop="25dp"
             android:background="@drawable/style_input"
@@ -92,6 +91,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="60dp"
             android:layout_marginRight="60dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/style_button_white"
             android:text="@string/delete"
