--- a/app/src/main/res/layout/activity_play_video.xml
+++ b/app/src/main/res/layout/activity_play_video.xml
@@ -9,53 +9,43 @@
 
     <include
         android:id="@+id/appBar"
-        layout="@layout/toolbar"
-        />
+        layout="@layout/toolbar" />
 
-    <ScrollView
+
+    <LinearLayout
         android:id="@+id/scrollVideo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.8">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/constraint_video_player"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.8"
-                android:visibility="visible">
-
-            </android.support.constraint.ConstraintLayout>
+        android:layout_weight="0.5"
+        android:weightSum="10">
 
 
-            <LinearLayout
-                android:id="@+id/linear_re_tags"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:orientation="vertical">
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraint_video_player"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:visibility="visible"
+            android:padding="8dp"
+            >
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/re_tags_selected"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal"
-                    android:padding="8dp" />
-            </LinearLayout>
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
 
-    </ScrollView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/re_tags_selected"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:padding="8dp" />
+
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollTimeline"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.2"/>
+        android:layout_weight="0.5" />
 </LinearLayout>
 
 
