--- a/app/src/main/res/layout/fragment_record_video.xml
+++ b/app/src/main/res/layout/fragment_record_video.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
     <fr.vyfe.view.AutoFitTextureView
         android:id="@+id/texture"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:foregroundGravity="center"
         app:layout_constraintEnd_toEndOf="@+id/video_control"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
