--- a/app/src/main/res/layout/activity_play_video.xml
+++ b/app/src/main/res/layout/activity_play_video.xml
@@ -25,9 +25,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="6"
-            android:visibility="visible"
-            android:padding="8dp"/>
-
+            android:visibility="visible" />
 
 
 
@@ -36,7 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:padding="8dp" />
+            android:paddingEnd="8dp" />
 
     </LinearLayout>
 
@@ -45,8 +43,8 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_gravity="right"
-        android:background="@drawable/caret_arrow_up"
-       />
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/caret_arrow_up" />
     <ScrollView
         android:id="@+id/scrollTimeline"
         android:layout_width="match_parent"
